--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/vstaykov/babelplayground.git"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
