--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "type": "git",
     "url": "https://github.com/vstaykov/babelplayground.git"
   },
+  "scripts": {
+    "build": "npm run build:js & npm run build:content",
+    "build:js": "babel src -d dist",
+    "build:content": "cp src/index.html dist/index.html & cp src/site.css dist/site.css"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1"
