Add ES2015 modules example with browserfy

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "url": "https://github.com/vstaykov/babelplayground.git"
   },
   "scripts": {
-    "build": "npm run build:js & npm run build:content",
+    "build": "npm run build:js & npm run build:browserfy & npm run build:content",
     "build:js": "babel src -d dist",
+    "build:browserfy": "browserify src/es2015_import.js -o dist/modules_bundle.js -t babelify",
     "build:content": "cp src/index.html dist/index.html & cp src/site.css dist/site.css"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0"
