--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
-    "browserify": "^16.2.0"
+    "browserify": "^16.2.0",
+    "mocha": "^5.1.0",
+    "should": "^13.2.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0"
